<package format="2">
   <name>techman_arm</name>
   <version>1.0.0</version>

   <author email="J.vanderToorn@student.tudelft.nl">Jules van der Toorn</author>
   <maintainer email="J.vanderToorn@student.tudelft.nl">Jules van der Toorn</maintainer>
   <description>ROS package to interact with a Techman robotic arm.</description>
   <license>MIT</license>

   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>rospy</depend>
   <depend>roscpp</depend>
   <depend>dynamic_reconfigure</depend>
   <depend>actionlib</depend>
   <depend>actionlib_msgs</depend>
</package>