<?xml version="1.0"?>
<package format="2">
   <name>robot_model</name>
   <version>1.0.0</version>

   <description>Package containing 3D model of TM5-700 arm.</description>
   <author email="J.vanderToorn@student.tudelft.nl">Jules van der Toorn</author>
   <maintainer email="J.vanderToorn@student.tudelft.nl">Jules van der Toorn</maintainer>
   <license>Apache-License-2.0</license>

   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>rviz</exec_depend>
   <exec_depend>urdf</exec_depend>
   <exec_depend>xacro</exec_depend>
</package>