<package format="1">
   <name>tm5700_gazebo</name>
   <version>1.0.0</version>

   <author email="J.vanderToorn@student.tudelft.nl">Jules van der Toorn</author>
   <maintainer email="J.vanderToorn@student.tudelft.nl">Jules van der Toorn</maintainer>
   <description>Package containing all related files to run Gazebo.</description>
   <license>Apache-License-2.0</license>

   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>gazebo_ros</build_depend>
   <build_depend>gazebo</build_depend>
   <build_depend>std_msgs</build_depend>

   <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>gazebo_ros</run_depend>
   <run_depend>std_msgs</run_depend>

   <buildtool_depend>catkin</buildtool_depend>
</package>